fix: aligned header logo and links better

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
 header {
     /* layout */
     display: flex;
+    align-items: center;
     padding: 1rem 10rem;
     /* appearance */
     background-color: var(--bg-color-dark);
